--- a/src/sections/Events.module.css
+++ b/src/sections/Events.module.css
@@ -65,6 +65,11 @@
   align-items: center;
   justify-content: center;
   perspective: 2000px;
+  /* Add buffer to prevent landscape jump on mobile UI resize */
+  margin-top: -5vh;
+  margin-bottom: -5vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 
 .hoverTarget {
